--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,11 @@
 @import "components/_form.scss";
 @import "components/_footer.scss";
 
+@import "layout/_hero.scss";
+@import "layout/_advantages.scss";
+@import "layout/_gallery.scss";
+@import "layout/_steps.scss";
+
 @import "layout/_terms.scss";
 @import "layout/_thanks.scss";
 @import "layout/_reviews.scss";
