--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -12,15 +12,15 @@ $lg: 992px;
 $xl: 1200px;
 
 @font-face {
-  // font-family: 'Prata';
-  // src: local('Prata');
-  // src: url(assets/font/Prata/Prata-Regular.ttf);
+  font-family: "DMSerifText";
+  src: local("DMSerifText");
+  src: url(assets/fonts/DM_Serif_Text/DMSerifText-Regular.ttf);
 }
 
 @font-face {
-  // font-family: 'Arial';
-  // src: local('Arial');
-  // src: url(assets/font/Arial.ttf);
+  font-family: "Roboto-VariableFont";
+  src: local("Roboto");
+  src: url(assets/fonts/Roboto/Roboto-VariableFont_wdth,wght.ttf);
 }
 
 html {
@@ -29,7 +29,7 @@ html {
 body {
   background: var(--bg-color);
   color: var(--text-color);
-  //   font-family: 'Arial', sans-serif;
+  font-family: "Roboto-VariableFont", sans-serif;
 }
 .hidden {
   overflow: hidden;
@@ -62,26 +62,31 @@ a {
 
 h1,
 .h1 {
-  // font-family: 'Prata', serif;
+  font-family: "DMSerifText", serif;
   font-size: 40px;
   @media (min-width: $md) {
-    font-size: 80px;
+    font-size: 64px;
   }
-  font-weight: 400;
   line-height: 120%;
   text-wrap: balance;
+  margin-bottom: 20px;
 }
 
 h2,
 .h2 {
-  // font-family: 'Prata', serif;
+  font-family: "DMSerifText", serif;
   font-size: 26px;
   @media (min-width: $md) {
-    font-size: 54px;
+    font-size: 48px;
   }
-  font-weight: 400;
   line-height: 110%;
   text-wrap: balance;
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-family: "DMSerifText", serif;
+  margin-bottom: 12px;
 }
 
 p,
@@ -94,11 +99,14 @@ a {
 p {
   margin-bottom: 8px;
 }
+a {
+  display: inline-block;
+}
 
 .subtitle {
   font-size: 24px;
   @media (min-width: $md) {
-    font-size: 50px;
+    font-size: 32px;
   }
 
   line-height: 120%;
@@ -107,6 +115,9 @@ p {
 .title-wrap {
   text-align: center;
   margin-bottom: 32px;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .text-center {
   text-align: center;
@@ -128,4 +139,18 @@ p {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.section-wrapper {
+  padding: 16px;
+  @media (min-width: $lg) {
+    padding: 42px;
+  }
+  border-radius: var(--border-radius-md);
+  &_pink {
+    background: var(--pink);
+  }
+}
+
+.text-primary {
+  color: var(--primary-color);
 }
