--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,26 +1,29 @@
 :root {
   --white-color: #ffffff;
+  --pink: #ed26b7;
 
-  --gray-100: #d5c9be;
-  --gray-200: #D6D6D6;
-  --gray-400: #55565A;
-  --gray-500: #38535D;
+  --gray-100: #f3f4f6;
+  --gray-200: #d6d6d6;
+  --gray-400: #55565a;
+  --gray-500: #38535d;
   --gray-600: #282829;
   --gray-800: #222222;
 
   --dark-color: var(--gray-800);
-  --bg-color: var(--gray-600);
-  --text-color: var(--white-color);
+  --bg-color: var(--white-color);
+  --text-color: var(--gray-800);
   --border-color: var(--gray-100);
   --input-border-color: var(--gray-200);
 
   --black-color: var(--gray-600);
-  --primary-color: var(--white-color);
+  --primary-color: var(--pink);
   --text-secondary: var(--gray-400);
 
   --border-radius: 4px;
+  --border-radius-md: 32px;
+  --border-radius-lg: 50px;
 
   /* buttons */
-  --btn-border-radius: var(--border-radius);
+  --btn-border-radius: var(--border-radius-lg);
   --btn-font-size: 20px;
 }
