--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -5,9 +5,6 @@
   border-radius: var(--btn-border-radius);
 
   padding: 24px 32px;
-  @media (min-width: $md) {
-    padding: 36px 50px;
-  }
 
   &:hover {
     opacity: 0.9;
@@ -21,9 +18,18 @@
 }
 
 .button-primary {
+  color: white;
   background-color: var(--primary-color);
 }
 
 .button-black {
   background-color: var(--black-color);
+}
+
+.button-light {
+  background-color: white;
+}
+.btn-sm {
+  padding: 10px 14px;
+  width: max-content;
 }
