--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -2,16 +2,15 @@
   display: flex;
   flex-direction: column;
   gap: 26px;
+  max-width: 700px;
+  margin: auto;
+  position: relative;
+  z-index: 5;
 
-  &__inputs {
-    // display: flex;
-    // flex-direction: column;
-    // gap: 12px;
-  }
-
-  &__input {
+  &__input,
+  textarea {
     padding: 12px 16px;
-    // font-family: "Inter";
+    font-family: "DMSerifText";
     border-radius: var(--border-radius);
     border-width: 1px;
   }
@@ -21,5 +20,38 @@
   // }
 
   &__checkbox {
+    color: white;
+  }
+  &__link {
+    color: white;
+  }
+}
+
+.section-wrapper_img {
+  background: url(assets/img/hero-bg.png) center/ cover no-repeat;
+  position: relative;
+}
+.bg-pink {
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(81, 0, 73, 0.708);
+    z-index: 0;
+    border-radius: inherit;
+  }
+}
+
+.section-form {
+  &__title {
+    position: relative;
+    z-index: 5;
+    text-align: center;
+    color: white;
+    margin-bottom: 24px;
   }
 }
