--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import "layout/_advantages.scss";
 @import "layout/_gallery.scss";
 @import "layout/_steps.scss";
+@import "layout/_testimonials.scss";
 
 @import "layout/_terms.scss";
 @import "layout/_thanks.scss";
