--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 :root {
   --white-color: #ffffff;
   --pink: #ed26b7;
+  --dark-pink: #89186b;
   --gray-100: #f3f4f6;
   --gray-200: #d6d6d6;
   --gray-400: #55565a;
@@ -49,6 +50,15 @@ body {
   background: var(--bg-color);
   color: var(--text-color);
   font-family: "Roboto-VariableFont", sans-serif;
+  /* header */
+  --header-h: 50px;
+  --header-padding: 10px;
+}
+@media (min-width: 992px) {
+  body {
+    --header-h: 70px;
+    --header-padding: 20px;
+  }
 }
 
 .hidden {
@@ -227,6 +237,15 @@ a {
   width: max-content;
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 50;
+  width: 100%;
+  background: var(--dark-pink);
+  padding: var(--header-padding) 0;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -236,7 +255,8 @@ a {
   position: relative;
   z-index: 5;
 }
-.form__input {
+.form__input,
+.form textarea {
   padding: 12px 16px;
   font-family: "DMSerifText";
   border-radius: var(--border-radius);
@@ -277,6 +297,30 @@ a {
   margin-bottom: 24px;
 }
 
+.footer {
+  background: var(--dark-pink);
+  padding: 40px 0;
+}
+.footer .contact-link {
+  color: var(--white-color);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.footer .contact-link:hover {
+  text-decoration: underline;
+}
+.footer__logo {
+  margin-bottom: 24px;
+}
+
+.logo {
+  width: 100px;
+}
+.logo .logo-img {
+  width: 100%;
+}
+
 .section-hero {
   min-height: 600px;
   background: url(assets/img/hero-bg.png) center/cover no-repeat;
@@ -284,12 +328,13 @@ a {
 .section-hero__hero-container {
   position: relative;
   z-index: 5;
-  padding-top: 10%;
+  padding-top: calc(var(--header-h) + 50px);
+  padding-bottom: 60px;
   color: white;
 }
 @media (min-width: 768px) {
   .section-hero__hero-container {
-    padding-top: 120px;
+    padding-top: calc(var(--header-h) + 120px);
   }
 }
 
@@ -444,6 +489,36 @@ a {
   .step__img {
     order: 5;
   }
+}
+
+.section-testimonials__small-gallery {
+  display: grid;
+  gap: 4px;
+  grid-template-columns: repeat(5, 60px);
+  align-items: center;
+  justify-content: center;
+}
+.section-testimonials__img-wrap {
+  aspect-ratio: 1/1;
+  position: relative;
+  border-radius: 25%;
+  overflow: hidden;
+  border: 2px solid transparent;
+  transition: all 0.3s;
+}
+.section-testimonials__img-wrap .img-fill {
+  position: absolute;
+}
+.section-testimonials__img-wrap:hover, .section-testimonials__img-wrap.active {
+  border-color: var(--primary-color);
+}
+.section-testimonials .testimonials {
+  max-width: 600px;
+  margin: auto;
+  margin-top: 32px;
+}
+.section-testimonials .empty-span {
+  padding-top: 8px;
 }
 
 .section-terms {
