--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -28,7 +28,7 @@
 }
 
 .section-wrapper_img {
-  background: url(assets/img/hero-bg.png) center/ cover no-repeat;
+  background: url(assets/img/form-bg.png) center/ cover no-repeat;
   position: relative;
 }
 .bg-pink {
