--- a/src/style.css
+++ b/src/style.css
@@ -270,7 +270,7 @@ a {
 }
 
 .section-wrapper_img {
-  background: url(assets/img/hero-bg.png) center/cover no-repeat;
+  background: url(assets/img/form-bg.png) center/cover no-repeat;
   position: relative;
 }
 
