--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,9 @@
 @import "layout/_gallery.scss";
 @import "layout/_steps.scss";
 @import "layout/_testimonials.scss";
+@import "layout/_price.scss";
+@import "layout/_video.scss";
+@import "layout/_delivery.scss";
 
 @import "layout/_terms.scss";
 @import "layout/_thanks.scss";
