--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
+@charset "UTF-8";
 :root {
   --white-color: #ffffff;
+  --light-pink: #ed26b872;
   --pink: #ed26b7;
   --dark-pink: #89186b;
   --gray-100: #f3f4f6;
@@ -195,11 +197,20 @@ a {
   }
 }
 .section-wrapper_pink {
-  background: var(--pink);
+  background: var(--light-pink);
 }
 
 .text-primary {
   color: var(--primary-color);
+}
+
+section:first-child {
+  padding-top: calc(var(--header-h) + 50px);
+}
+@media (min-width: 768px) {
+  section:first-child {
+    padding-top: calc(var(--header-h) + 100px);
+  }
 }
 
 .button {
@@ -224,6 +235,7 @@ a {
 }
 
 .button-black {
+  color: white;
   background-color: var(--black-color);
 }
 
@@ -237,6 +249,10 @@ a {
   width: max-content;
 }
 
+.button-wrap {
+  margin-top: 24px;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -246,6 +262,93 @@ a {
   padding: var(--header-padding) 0;
 }
 
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-menu {
+  --padding-link: 5px;
+  display: flex;
+  gap: calc(30px - 2 * var(--padding-link));
+}
+
+.nav-menu__link {
+  padding: var(--padding-link);
+  font-style: italic;
+  text-transform: uppercase;
+  letter-spacing: 0.04em;
+  color: var(--white-color);
+}
+
+.nav-menu__link:hover {
+  text-decoration: underline;
+}
+
+.burger {
+  cursor: pointer;
+  transform: translateY(-2px);
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+@media (min-width: 768px) {
+  .burger {
+    display: none;
+  }
+}
+.burger::before,
+.burger::after {
+  content: "";
+  width: 24px;
+  height: 2px;
+  background: var(--white-color);
+  display: block;
+  margin: 5px 0;
+  transition: all 0.2s;
+}
+
+.burger.burger-rotate .burger-span {
+  opacity: 0;
+}
+
+.burger.burger-rotate::before {
+  transform: translateY(9px) rotate(45deg);
+}
+
+.burger.burger-rotate::after {
+  transform: translateY(-9px) rotate(-45deg);
+}
+
+.burger-span {
+  width: 24px;
+  height: 2px;
+  background: var(--white-color);
+}
+
+@media (max-width: 768px) {
+  .header__nav-menu {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s;
+    padding: var(--container-padding);
+    overflow: auto;
+    position: fixed;
+    top: calc(var(--header-h) - 2px);
+    left: 0;
+    width: 100%;
+    height: calc(100dvh - var(--header-h) + 4px);
+    background: var(--dark-pink);
+    z-index: 40;
+    flex-direction: column;
+    align-items: center;
+  }
+  .header__nav-menu.nav-hidden {
+    opacity: 1;
+    visibility: visible;
+  }
+}
 .form {
   display: flex;
   flex-direction: column;
@@ -303,6 +406,7 @@ a {
 }
 .footer .contact-link {
   color: var(--white-color);
+  margin-bottom: 12px;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -310,8 +414,31 @@ a {
 .footer .contact-link:hover {
   text-decoration: underline;
 }
-.footer__logo {
-  margin-bottom: 24px;
+.footer__item {
+  padding: 16px;
+}
+.footer__item:last-child {
+  margin-top: 40px;
+}
+.footer__nav-menu {
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.footer__bottom-link {
+  color: var(--white-color);
+}
+.footer__wrap {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px;
+}
+.footer__links {
+  max-width: 600px;
+}
+.footer__policy {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .logo {
@@ -328,14 +455,8 @@ a {
 .section-hero__hero-container {
   position: relative;
   z-index: 5;
-  padding-top: calc(var(--header-h) + 50px);
   padding-bottom: 60px;
   color: white;
-}
-@media (min-width: 768px) {
-  .section-hero__hero-container {
-    padding-top: calc(var(--header-h) + 120px);
-  }
 }
 
 .section-advantages__inner-grid {
@@ -382,6 +503,22 @@ a {
   gap: 32px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
+.gallery_auto {
+  gap: 6px;
+}
+@media (min-width: 992px) {
+  .gallery_auto {
+    gap: 16px;
+  }
+}
+.gallery_auto .gallery-item__img-wrap {
+  aspect-ratio: auto;
+  height: 100%;
+  width: 100%;
+}
+.gallery .gallery-item-lg {
+  grid-column: span 2;
+}
 
 .gallery-item {
   padding: 8px;
@@ -417,7 +554,7 @@ a {
 }
 @media (min-width: 768px) {
   .section-contents__contents {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 0.8fr 0.4fr;
   }
 }
 @media (min-width: 1200px) {
@@ -427,6 +564,7 @@ a {
 }
 .section-contents__small-gallery {
   display: grid;
+  gap: 4px;
   grid-template-columns: repeat(3, 60px);
   align-items: center;
   justify-content: center;
@@ -494,9 +632,14 @@ a {
 .section-testimonials__small-gallery {
   display: grid;
   gap: 4px;
-  grid-template-columns: repeat(5, 60px);
+  grid-template-columns: repeat(5, 52px);
   align-items: center;
   justify-content: center;
+}
+@media (min-width: 576px) {
+  .section-testimonials__small-gallery {
+    grid-template-columns: repeat(5, 60px);
+  }
 }
 .section-testimonials__img-wrap {
   aspect-ratio: 1/1;
@@ -519,6 +662,150 @@ a {
 }
 .section-testimonials .empty-span {
   padding-top: 8px;
+}
+
+.price-card__img-wrap {
+  aspect-ratio: 700/500;
+  position: relative;
+  border-radius: var(--border-radius-md);
+  overflow: hidden;
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 768px) {
+  .price-card__img-wrap:hover .price-card__order-btn-wrap {
+    opacity: 1;
+    visibility: visible;
+    z-index: 6;
+  }
+}
+.price-card .img-fill {
+  position: absolute;
+}
+.price-card__order-btn-wrap {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+  z-index: 6;
+}
+@media screen and (min-width: 768px) {
+  .price-card__order-btn-wrap {
+    width: 100%;
+    height: 100%;
+    z-index: -5;
+    transition: all 0.3s;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(81, 0, 73, 0.708);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.section-prices {
+  padding-top: calc(var(--header-h) + 50px);
+}
+.section-prices__price-cards {
+  display: grid;
+  gap: 12px;
+}
+@media (min-width: 576px) {
+  .section-prices__price-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 768px) {
+  .section-prices__price-cards {
+    gap: 32px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.contact-info {
+  display: grid;
+  gap: 12px;
+}
+@media (min-width: 768px) {
+  .contact-info {
+    gap: 24px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.contact-info__item {
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.contact-info__item:before {
+  content: "→";
+  color: var(--primary-color);
+  line-height: 1;
+}
+.contact-info__item .contact-link {
+  transition: all 0.3s;
+}
+.contact-info__item .contact-link:hover {
+  color: var(--primary-color);
+}
+.contact-info__img {
+  border-radius: var(--border-radius-md);
+  overflow: hidden;
+  max-height: 300px;
+}
+.contact-info__info {
+  padding: 16px;
+  border-radius: var(--border-radius-md);
+}
+@media (min-width: 768px) {
+  .contact-info__info {
+    padding: 32px;
+  }
+}
+@media (min-width: 768px) {
+  .contact-info__inn-wrap {
+    max-width: 500px;
+  }
+}
+
+.map {
+  max-width: 100%;
+}
+
+.bg-pink-light {
+  background: var(--light-pink);
+}
+
+.video-container iframe {
+  max-width: 100%;
+  width: 560px;
+  aspect-ratio: 3/2;
+  height: auto;
+  border-radius: var(--border-radius-md);
+}
+@media (min-width: 576px) {
+  .video-container iframe {
+    height: 318px;
+  }
+}
+
+.section-delivery h3:not(:first-child) {
+  margin-top: 40px;
+}
+.section-delivery .section-wrapper_img {
+  background-image: url(assets/img/delivery-bg.png);
+}
+.section-delivery .delivery-info {
+  position: relative;
+  z-index: 2;
+  color: white;
+  max-width: 600px;
+  margin: auto;
+}
+.section-delivery__bottom {
+  margin-top: 40px;
 }
 
 .section-terms {
