--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,10 @@
   box-sizing: border-box;
 }
 
+:target {
+  scroll-margin-top: 100px;
+}
+
 @font-face {
   font-family: "DMSerifText";
   src: local("DMSerifText");
